<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg_intro">

        <ImageView
            android:id="@+id/im_LogoSlide"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:scaleType="fitXY"
            android:src="@drawable/intro_slide_1"
            app:layout_constraintDimensionRatio="390:300"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/ll_text_container"
            app:layout_constraintVertical_chainStyle="spread_inside" />

        <LinearLayout
            android:id="@+id/ll_text_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginHorizontal="@dimen/_16sdp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/im_LogoSlide"
            app:layout_constraintBottom_toTopOf="@id/txtNext">

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/intro_slide_1_title"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="@string/intro_slide_1_desc"
                android:textColor="@color/textSecondary"
                android:textSize="14sp" />
        </LinearLayout>

        <TextView
            android:textAlignment="center"
            android:layout_marginHorizontal="@dimen/_8sdp"
            android:paddingVertical="@dimen/_6sdp"
            android:background="@drawable/bg_button_ads"
            android:id="@+id/txtNext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/intro_next"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@id/ll_text_container"
            app:layout_constraintBottom_toTopOf="@+id/fr_ads"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <FrameLayout
            android:id="@+id/fr_ads"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <include layout="@layout/ads_native_shimer" />
        </FrameLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>